# opentelemetry-cpp

./: .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
api/include/opentelemetry/common/: key_value_iterable.h
api/include/opentelemetry/trace/: span_context.h  tracer.h
ci/: do_ci.sh
exporters/: CMakeLists.txt
exporters/etw/: BUILD  CMakeLists.txt
exporters/etw/include/opentelemetry/exporters/etw/: etw_logger_exporter.h  etw_provider_exporter.h  etw_tracer_exporter.h  utils.h  uuid.hpp
exporters/etw/src/: etw_logger_exporter.cc
exporters/etw/test/: etw_logger_test.cc  etw_provider_test.cc  etw_tracer_test.cc
sdk/include/opentelemetry/sdk/trace/: etw_data.h  simple_processor.h
